[gd_scene load_steps=34 format=3 uid="uid://bsjcg2emguurk"]

[ext_resource type="Script" uid="uid://dwnoc572rbxo0" path="res://cs/HoneyPatcher.cs" id="1_72wd4"]
[ext_resource type="Texture2D" uid="uid://b8c1paw2vgij7" path="res://assets/merge_nocomp_1.png" id="2_clxbb"]
[ext_resource type="Texture2D" uid="uid://c3jme3r8tpumq" path="res://assets/HONEYBADGER.png" id="3_uvcbp"]
[ext_resource type="Script" uid="uid://4aefcieh1bhm" path="res://gd/honey_badger.gd" id="4_vxq1r"]
[ext_resource type="Texture2D" uid="uid://bvut6magca8we" path="res://assets/explode.png" id="5_idu76"]
[ext_resource type="Script" uid="uid://bfth36gmn7y18" path="res://gd/description.gd" id="6_mif06"]
[ext_resource type="Texture2D" uid="uid://dwmvkiyktnvft" path="res://assets/explotano/explotano08.png" id="6_y4hxk"]
[ext_resource type="Texture2D" uid="uid://caab5im6xbu1m" path="res://assets/explotano/explotano09.png" id="7_pvwf1"]
[ext_resource type="Texture2D" uid="uid://dxw2gjnjsn3kk" path="res://assets/explotano/explotano10.png" id="8_t525e"]
[ext_resource type="Texture2D" uid="uid://cdjgj5ub4n8ta" path="res://assets/explotano/explotano11.png" id="9_wqh0f"]
[ext_resource type="Texture2D" uid="uid://bpjkc4ybr40g8" path="res://assets/explotano/explotano12.png" id="10_6hmc5"]
[ext_resource type="Texture2D" uid="uid://c5f3cdl1y14pg" path="res://assets/explotano/explotano13.png" id="11_fculv"]
[ext_resource type="Texture2D" uid="uid://cwstr4tnqscph" path="res://assets/explotano/explotano14.png" id="12_ixcyh"]
[ext_resource type="Texture2D" uid="uid://8p1kix6ddhks" path="res://assets/explotano/explotano15.png" id="13_f5t1a"]
[ext_resource type="Texture2D" uid="uid://bngkboxeb3n3g" path="res://assets/explotano/explotano16.png" id="14_j6888"]
[ext_resource type="Texture2D" uid="uid://6xtcwqktfams" path="res://assets/explotano/explotano00.png" id="15_np61q"]
[ext_resource type="Texture2D" uid="uid://x4ugymkgdojg" path="res://assets/explotano/explotano01.png" id="16_3m2l0"]
[ext_resource type="Texture2D" uid="uid://vq8q0bi7r8gp" path="res://assets/explotano/explotano02.png" id="17_8h525"]
[ext_resource type="Texture2D" uid="uid://btyr3ah81udoq" path="res://assets/explotano/explotano03.png" id="18_wrbbu"]
[ext_resource type="Texture2D" uid="uid://duwywld4vp4bi" path="res://assets/explotano/explotano04.png" id="19_2issm"]
[ext_resource type="Texture2D" uid="uid://cgors0gnmli82" path="res://assets/explotano/explotano05.png" id="20_331ft"]
[ext_resource type="Texture2D" uid="uid://bil4r8s58dipx" path="res://assets/explotano/explotano06.png" id="21_3ibrs"]
[ext_resource type="Texture2D" uid="uid://bj5cwia2q07ly" path="res://assets/explotano/explotano07.png" id="22_215ki"]
[ext_resource type="AudioStream" uid="uid://cfgjpqrcyrimq" path="res://assets/explotano.ogg" id="23_1qnki"]
[ext_resource type="Script" uid="uid://ru6t8wmkm4sm" path="res://gd/gen_patches.gd" id="25_7sdjr"]
[ext_resource type="Script" uid="uid://b1gngepcl1vf2" path="res://gd/usrdir_dialog.gd" id="25_61viv"]
[ext_resource type="Script" uid="uid://dmt3ma53sykab" path="res://gd/lightning.gd" id="27_0b2i5"]
[ext_resource type="Texture2D" uid="uid://dc6uccaglxl3j" path="res://assets/HONEYNOW.png" id="27_iaya5"]
[ext_resource type="Texture2D" uid="uid://c2icqgth1gib0" path="res://assets/lightning-png-transparent-4.png" id="27_vnpkj"]
[ext_resource type="Script" uid="uid://cfw7siled7tvq" path="res://gd/honey_now.gd" id="28_alpvu"]
[ext_resource type="Script" uid="uid://bg4y2v77257p5" path="res://gd/honey_now_big.gd" id="28_kwxox"]
[ext_resource type="AudioStream" uid="uid://8m6yi6fogqc2" path="res://assets/now.ogg" id="32_a42q4"]

[sub_resource type="SpriteFrames" id="SpriteFrames_dcw1t"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_y4hxk")
}, {
"duration": 1.0,
"texture": ExtResource("7_pvwf1")
}, {
"duration": 1.0,
"texture": ExtResource("8_t525e")
}, {
"duration": 1.0,
"texture": ExtResource("9_wqh0f")
}, {
"duration": 1.0,
"texture": ExtResource("10_6hmc5")
}, {
"duration": 1.0,
"texture": ExtResource("11_fculv")
}, {
"duration": 1.0,
"texture": ExtResource("12_ixcyh")
}, {
"duration": 1.0,
"texture": ExtResource("13_f5t1a")
}, {
"duration": 1.0,
"texture": ExtResource("14_j6888")
}, {
"duration": 1.0,
"texture": ExtResource("15_np61q")
}, {
"duration": 1.0,
"texture": ExtResource("16_3m2l0")
}, {
"duration": 1.0,
"texture": ExtResource("17_8h525")
}, {
"duration": 1.0,
"texture": ExtResource("18_wrbbu")
}, {
"duration": 1.0,
"texture": ExtResource("19_2issm")
}, {
"duration": 1.0,
"texture": ExtResource("20_331ft")
}, {
"duration": 1.0,
"texture": ExtResource("21_3ibrs")
}, {
"duration": 1.0,
"texture": ExtResource("22_215ki")
}],
"loop": false,
"name": &"default",
"speed": 15.0
}]

[node name="HoneyPatcher" type="Node2D" node_paths=PackedStringArray("_acceptdialog", "_usrdirdialog", "_install", "_restoreusrdir", "_modsfolder", "_genpatches", "_progress", "_game", "_patchname", "_patchesfolder", "_gameselector")]
script = ExtResource("1_72wd4")
_acceptdialog = NodePath("AcceptDialog")
_usrdirdialog = NodePath("USRDIRDialog")
_install = NodePath("Install")
_restoreusrdir = NodePath("RestoreUSRDIR")
_modsfolder = NodePath("Mods")
_genpatches = NodePath("GenPatches")
_progress = NodePath("Progress")
_game = NodePath("game")
_patchname = NodePath("PatchName")
_patchesfolder = NodePath("PatchesFolder")
_gameselector = NodePath("MenuBar/PopupMenu")

[node name="Background" type="Sprite2D" parent="."]
z_index = -1
position = Vector2(480, 270)
scale = Vector2(120, 1.04651)
texture = ExtResource("2_clxbb")

[node name="HoneyBadger" type="Sprite2D" parent="." node_paths=PackedStringArray("explode", "explotano", "explodesound")]
position = Vector2(471, 164)
scale = Vector2(0.532051, 0.522436)
texture = ExtResource("3_uvcbp")
script = ExtResource("4_vxq1r")
explode = NodePath("../Explode")
explotano = NodePath("../Explotano")
explodesound = NodePath("../ExplodeSound")

[node name="Explode" type="Sprite2D" parent="."]
visible = false
position = Vector2(471, 163)
scale = Vector2(0.517134, 0.552542)
texture = ExtResource("5_idu76")

[node name="Explotano" type="AnimatedSprite2D" parent="."]
visible = false
z_index = 1
position = Vector2(472, 158)
scale = Vector2(1.54, 1.51241)
sprite_frames = SubResource("SpriteFrames_dcw1t")

[node name="ExplodeSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("23_1qnki")
volume_db = -19.81

[node name="Title" type="Label" parent="."]
offset_left = 343.0
offset_top = 47.0
offset_right = 596.0
offset_bottom = 70.0
text = "HoneyPatcher: Arcade Stage 6AA"

[node name="Description" type="Label" parent="."]
offset_left = 251.0
offset_top = 449.0
offset_right = 687.0
offset_bottom = 540.0
text = "Hover over a button for more details..."
horizontal_alignment = 1
autowrap_mode = 3
script = ExtResource("6_mif06")

[node name="SelectUSRDIR" type="Button" parent="."]
offset_left = 387.0
offset_top = 246.0
offset_right = 555.0
offset_bottom = 285.0
text = "Select USRDIR..."

[node name="Mods" type="Button" parent="."]
offset_left = 387.0
offset_top = 285.0
offset_right = 555.0
offset_bottom = 324.0
text = "Open mods folder...
"

[node name="Install" type="Button" parent="."]
offset_left = 387.0
offset_top = 324.0
offset_right = 555.0
offset_bottom = 363.0
text = "Install all mods..."

[node name="RestoreUSRDIR" type="Button" parent="."]
offset_left = 387.0
offset_top = 363.0
offset_right = 555.0
offset_bottom = 402.0
text = "Uninstall all mods..."

[node name="Unpack" type="Button" parent="."]
visible = false
offset_left = 268.0
offset_top = 406.0
offset_right = 436.0
offset_bottom = 445.0
text = "Unpack game files..."

[node name="GenPatches" type="Button" parent="." node_paths=PackedStringArray("lightning", "honeynow", "honeynowbig", "lightningsound", "explotano")]
offset_left = 693.0
offset_top = 252.0
offset_right = 862.0
offset_bottom = 291.0
text = "Create patches...."
autowrap_mode = 2
script = ExtResource("25_7sdjr")
lightning = NodePath("../Lightning")
honeynow = NodePath("../HoneyNOW")
honeynowbig = NodePath("../HoneyNOW/HoneyNOWBig")
lightningsound = NodePath("../HoneyNOW/HoneyNOWBig/LightningSound")
explotano = NodePath("../Explode")

[node name="PatchesFolder" type="Button" parent="."]
offset_left = 693.0
offset_top = 291.0
offset_right = 862.0
offset_bottom = 330.0
text = "Open workbench..."

[node name="PatchName" type="LineEdit" parent="."]
offset_left = 693.0
offset_top = 212.0
offset_right = 862.0
offset_bottom = 252.0
placeholder_text = "Patch name..."

[node name="game" type="Label" parent="."]
offset_top = 517.0
offset_right = 960.0
offset_bottom = 540.0
text = "Current Game: Initial D Ver. 2"
horizontal_alignment = 2

[node name="MenuBar" type="MenuBar" parent="."]
offset_left = 413.0
offset_top = 412.0
offset_right = 530.0
offset_bottom = 443.0
tooltip_text = "Select the game you would like to mod."

[node name="PopupMenu" type="PopupMenu" parent="MenuBar"]
title = "Select Game..."
item_count = 4
item_0/text = "Sonic the Fighters"
item_0/id = 0
item_1/text = "Virtua Fighter 2"
item_1/id = 1
item_2/text = "Fighting Vipers"
item_2/id = 2
item_3/text = "Cyber-Troopers Virtual-On: Operation Moongate"
item_3/id = 3

[node name="USRDIRDialog" type="FileDialog" parent="."]
title = "Open a Directory"
initial_position = 1
size = Vector2i(687, 426)
ok_button_text = "Select Current Folder"
file_mode = 2
access = 2
show_hidden_files = true
script = ExtResource("25_61viv")

[node name="AcceptDialog" type="AcceptDialog" parent="."]
title = "Notice"
initial_position = 1
size = Vector2i(674, 106)
dialog_text = "if you see this ping ali and tell her what you were doing bc that means she messed up"

[node name="Progress" type="RichTextLabel" parent="."]
offset_right = 220.0
offset_bottom = 540.0
scroll_active = false
scroll_following = true
vertical_alignment = 2

[node name="Lightning" type="Sprite2D" parent="."]
z_index = -1
position = Vector2(416.5, 264)
scale = Vector2(2.59063, 1.66875)
texture = ExtResource("27_vnpkj")
script = ExtResource("27_0b2i5")

[node name="HoneyNOW" type="Sprite2D" parent="."]
position = Vector2(471, 163.5)
scale = Vector2(0.532051, 0.522436)
texture = ExtResource("27_iaya5")
script = ExtResource("28_alpvu")

[node name="HoneyNOWBig" type="Sprite2D" parent="HoneyNOW"]
visible = false
z_index = 3
position = Vector2(16.9157, 203.853)
scale = Vector2(5.78313, 3.31288)
texture = ExtResource("27_iaya5")
script = ExtResource("28_kwxox")

[node name="LightningSound" type="AudioStreamPlayer" parent="HoneyNOW/HoneyNOWBig"]
stream = ExtResource("32_a42q4")

[connection signal="animation_finished" from="Explotano" to="HoneyBadger" method="_on_explotano_animation_finished"]
[connection signal="mouse_entered" from="SelectUSRDIR" to="Description" method="_on_select_usrdir_mouse_entered"]
[connection signal="pressed" from="SelectUSRDIR" to="USRDIRDialog" method="_on_select_usrdir_pressed"]
[connection signal="mouse_entered" from="Mods" to="Description" method="_on_psarc_mouse_entered"]
[connection signal="mouse_entered" from="Install" to="Description" method="_on_install_mouse_entered"]
[connection signal="pressed" from="Install" to="." method="_on_install_pressed"]
[connection signal="mouse_entered" from="RestoreUSRDIR" to="Description" method="_on_restore_usrdir_mouse_entered"]
[connection signal="pressed" from="RestoreUSRDIR" to="." method="_on_restore_usrdir_pressed"]
[connection signal="mouse_entered" from="Unpack" to="Description" method="_on_unpack_mouse_entered"]
[connection signal="mouse_entered" from="GenPatches" to="Description" method="_on_gen_patches_mouse_entered"]
[connection signal="pressed" from="GenPatches" to="." method="_on_gen_patches_pressed"]
[connection signal="pressed" from="PatchesFolder" to="." method="_on_button_pressed"]
[connection signal="mouse_entered" from="MenuBar" to="Description" method="_on_menu_bar_mouse_entered"]
[connection signal="id_pressed" from="MenuBar/PopupMenu" to="." method="_on_popup_menu_id_pressed"]
[connection signal="dir_selected" from="USRDIRDialog" to="." method="_on_usrdir_dialog_dir_selected"]
